--- a/settings.json
+++ b/settings.json
@@ -10,7 +10,7 @@
      "Gopay" : "-",
      "Dana" : "-",
      "Ovo" : "-",
-     "namaDocument": "ʜᴇᴋɪʀᴀ ɴᴏ ᴛᴇɴ",
+     "namaDocument": "CREAM",
      "joinGcExtream": true,
      "Anticall": true,
      "multi": true,
