--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
      "prefix": "!",
      "namalu" : "CREAMZ",
-     "nomerlu": "60104316011",
+     "nomerlu": "601135268529",
      "namabot": "CREAMZ BOTZ",
      "nomerbot": "60104316011",
      "gender" : "FEMALE",
@@ -10,7 +10,7 @@
      "Gopay" : "-",
      "Dana" : "-",
      "Ovo" : "-",
-     "namaDocument": "ʜᴇᴋɪʀᴀ ɴᴏ ᴛᴇɴ",
+     "namaDocument": "ʜᴇᴋɪʀᴀ",
      "joinGcExtream": true,
      "Anticall": true,
      "multi": true,
@@ -27,7 +27,7 @@
      "troliMenu": false,
      "lokasiMenu": true,
      "documentMenu": false,
-     "autoblockcmd" : true,
+     "autoblockcmd" : false,
      "autoWelcome": false,
      "welcomeType1": false,
      "welcomeType2": false,
